# mirascrape

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/: cli.py  config.py  db.py  models.py
src/scrapers/: base.py  fotocasa.py  habitaclia.py  idealista.py  pisos_com.py  spain_real_estate.py
tests/: test_connectivity.py  test_parser.py  test_pisos_com.py  test_spain_real_estate.py
tests/fixtures/: spain_real_estate_list.html  spain_real_estate_list_valencia.html
